fix(dotfiles): address language skill review